--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Успех начинается с правильного домена - ElitDomen.Ru</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +39,43 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!--Start of Tawk.to Script-->
+    <div id="form_195865_1"></div>
+    <script type="text/javascript">
+       (function (d, w, c) {
+           (w[c] = w[c] || []).push({formId:195865,host:"formdesigner.ru",formHeight:100, el: "form_195865_1",center: 1,scroll: 0});
+           var s = d.createElement("script"), g = "getElementsByTagName";
+           s.type = "text/javascript"; s.charset="UTF-8"; s.async = true;
+           s.src = (d.location.protocol == "https:" ? "https:" : "http:")+"//formdesigner.ru/js/iform.js?v=0.0.3";
+           var h=d[g]("head")[0] || d[g]("body")[0];
+           h.appendChild(s);
+       })(document, window, "fdforms");
+    </script>
+   <script type="text/javascript">
+    var _FDFeedBack = {
+        formId: 195865,
+        text: "Контакты",
+        background: "#1c6ea4",
+        color: "#ffffff",
+        fontSize: "14px",
+        borderRadius: 5,
+        buttonSide: "right",
+        buttonAlign: "center",
+        popup: {
+            hideCloseBtn: false,
+            host: "formdesigner.ru",
+            overlay: {
+                background: "#000000",
+                opacity: 0.1
+            }
+        }
+    };
+    (function() {
+        var fd = document.createElement("script"); fd.type = "text/javascript"; fd.async = true;
+        fd.src = (document.location.protocol == "https:" ? "https:" : "http:")+"//formdesigner.ru/js/widgets/feedback.js?v=0.0.3";
+       var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(fd, s);
+    })();
+    </script>
+  <!--End of Tawk.to Script-->
   </body>
 </html>
